# camera_capture

./: .gitignore  CMakeLists.txt  build_android.sh  build_win.bat  camera_capture.cpp
