cmake_minimum_required (VERSION 3.6)

project ("camera_capture")

find_package(OpenCV REQUIRED)

include_directories(${CMAKE_CURRENT_LIST_DIR} ${OpenCV_INCLUDE_DIRS})
link_directories(${CMAKE_CURRENT_LIST_DIR})

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /GR -std=c++11 /Zi /Od /DEBUG")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd /GR -std=c++11 /Zi /Od /DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /GR -std=c++11 /Zi /Od /DEBUG")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT /GR -std=c++11 /Zi /Od /DEBUG")

set_property (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
aux_source_directory(${CMAKE_CURRENT_LIST_DIR} MAINSRC)
add_executable(${PROJECT_NAME} ${MAINSRC})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})

include(GNUInstallDirs)
install(TARGETS  ${PROJECT_NAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        FRAMEWORK DESTINATION ${CMAKE_INSTALL_LIBDIR})